[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Container.gd" type="Script" id=2]
[ext_resource path="res://scripts/enemyFarm.gd" type="Script" id=3]
[ext_resource path="res://scripts/Button.gd" type="Script" id=4]

[node name="GAME" type="Node2D"]

[node name="spawn" type="Timer" parent="."]
wait_time = 0.17
one_shot = true
autostart = true

[node name="enemyFarm" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 300, 631.785 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="buttonContainer" type="HBoxContainer" parent="GUI"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -251.76
margin_bottom = -131.76
rect_min_size = Vector2( 0, 120 )
custom_constants/separation = 26
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button0" type="Button" parent="GUI/buttonContainer"]
margin_left = 94.0
margin_right = 214.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color_hover = Color( 0.717647, 0.372549, 0.372549, 1 )
script = ExtResource( 4 )

[node name="Button1" type="Button" parent="GUI/buttonContainer"]
margin_left = 240.0
margin_right = 360.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 0 )
script = ExtResource( 4 )

[node name="Button2" type="Button" parent="GUI/buttonContainer"]
margin_left = 386.0
margin_right = 506.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 0 )
script = ExtResource( 4 )
[connection signal="timeout" from="spawn" to="enemyFarm" method="_on_spawn_timeout"]
[connection signal="pressed" from="GUI/buttonContainer/Button0" to="Player" method="_on_Button0_pressed"]
[connection signal="pressed" from="GUI/buttonContainer/Button0" to="enemyFarm" method="_on_Button0_pressed"]
[connection signal="pressed" from="GUI/buttonContainer/Button1" to="Player" method="_on_Button1_pressed"]
[connection signal="pressed" from="GUI/buttonContainer/Button1" to="enemyFarm" method="_on_Button1_pressed"]
[connection signal="pressed" from="GUI/buttonContainer/Button2" to="Player" method="_on_Button2_pressed"]
[connection signal="pressed" from="GUI/buttonContainer/Button2" to="enemyFarm" method="_on_Button2_pressed"]
